styled the app, playable, in progress

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,38 @@
-.snake {
-  background-color: red;
-}
-
-.apple {
-  background-color: green;
-}
-div {
-  width: 10px;
-  height: 10px;
-  outline: 1px solid black;
+@font-face {
+  font-family: "game-font";
+  src: url(../fonts/Retro\ Gaming.ttf);
 }
 .game-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100px;
-  /* height: 100px; */
+  text-align: center;
 }
+.game-wrapper .title {
+  font-family: "game-font";
+}
+.game-wrapper .title button {
+  box-shadow: 1px 1px 2px 3px;
+  font-family: "game-font";
+}
+.game-wrapper .title .score {
+  margin-top: 15px;
+}
+.game-wrapper .squares-container {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 200px;
+  margin: 15px auto;
+}
+.game-wrapper .squares-container div {
+  width: 20px;
+  height: 20px;
+  outline: 1px solid black;
+}
+.game-wrapper .squares-container .snake {
+  background-image: url("../images/snake.png");
+  background-size: cover;
+}
+.game-wrapper .squares-container .apple {
+  background-color: green;
+}
+
+/*# sourceMappingURL=style.css.map */
